--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@faker-js/faker": "^8.2.0",
     "@hapi/boom": "^10.0.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "joi": "^17.11.0"
   }
