--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@hapi/boom": "^10.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "joi": "^17.11.0"
+    "joi": "^17.11.0",
+    "pg": "^8.11.3"
   }
 }
